# tcc-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_auth_org.py  002_profile_voice.py
app/: config.py  lifespan.py  logging.py  main.py
app/agents/: checkpointer.py  graph.py  tools.py
app/api/: auth.py  auth_jwt.py  deps.py  router.py
app/api/v1/: agents.py  health.py  me.py  organizations.py  voice.py
app/core/: exceptions.py  handlers.py
app/db/: session.py
app/db/models/: __init__.py  enums.py  invite.py  organization.py  user.py  voice.py
app/middleware/: logging.py  request_id.py
app/schemas/: agent.py  base.py  profile.py  user.py  voice.py
app/services/: agent_service.py  profile_service.py  user_service.py  voice_service.py
tests/: conftest.py  fakes.py  test_agents.py  test_auth.py  test_errors.py  test_health.py  test_profile_voice.py  test_user_service.py
